--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,38 +11,14 @@
     "import pandas as pd\n",
     "from pyspark import SparkContext\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col,udf,lower"
+    "from pyspark.sql.functions import col,udf,lower,date_format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/11/03 09:25:44 WARN Utils: Your hostname, LinuxGUI resolves to a loopback address: 127.0.1.1; using 192.168.0.103 instead (on interface eno1)\n",
-      "22/11/03 09:25:44 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/11/03 09:25:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession \\\n",
     "        .builder \\\n",
@@ -62,7 +38,7 @@
    "outputs": [],
    "source": [
     "# Read all airline delay info under ./data\n",
-    "US_ALs = spark.read.option(\"header\",True).csv('./data/airlines/')\n",
+    "US_ALs = spark.read.option(\"header\",True).csv('./data/AIRLINES/')\n",
     "US_APs = spark.read.option(\"header\",True).csv('./data/us-airports_clean.csv')\n",
     "Stations = spark.read.option(\"header\",False).csv('./data/ghcnd-stations_clean.csv')\n",
     "# airportDF = spark.read.option(\"header\",True).csv('./data/airport-codes_clean.csv')\n",
@@ -200,40 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 2:======================================================> (99 + 3) / 102]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "374901618\n",
-      "Row(ORIGIN='BGM', STATE='NY', CITY='Binghamton', LOCAL='BGM', IATA='BGM', IDENT='KBGM', NAME='Greater Binghamton/Edwin A Link field', STATION='USW00014738')\n",
-      "Row(_c0='AE000041196', _c1='20130101', _c2='TMAX', _c3='250', _c4=None, _c5=None, _c6='S', _c7=None)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "full_airport_station =  spark.read.option(\"header\",True).csv('./data/airports_stations.csv')\n",
     "ghcnd_stations = spark.read.option(\"header\",False).csv('./data/ghcnd_by_year/')\n",
     "\n",
     "full_airport_station.createOrReplaceTempView('full_airport_station')\n",
-    "ghcnd_stations.createOrReplaceTempView('ghcnd_stations')\n",
-    "\n",
+    "ghcnd_stations.createOrReplaceTempView('ghcnd_stations')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(ghcnd_stations.count())\n",
     "print(full_airport_station.head())\n",
     "print(ghcnd_stations.head())"
@@ -241,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,17 +214,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Keep not null rows and rename them based on GHCND documents\n",
     "filter_null = ghcnd_stations_clean \\\n",
@@ -278,9 +229,46 @@
     "                        col('_c4').alias(\"M_FLAG\"), \\\n",
     "                        col('_c5').alias(\"Q_FLAG\"), \\\n",
     "                        col('_c6').alias(\"S_FLAG\"), \\\n",
-    "                        col('_c7').alias(\"OBS_TIME\"))\n",
-    "filter_null.count()\n",
+    "                        col('_c7').alias(\"OBS_TIME\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_null.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "filter_null.write.option(\"header\",True).csv(\"./output/filter_all_v4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "airlines = spark.read.option(\"header\",True).csv('./data/AIRLINES/')\n",
+    "airlines = airlines.select(date_format(col('FL_DATE'),\"yyyyMMdd\").alias(\"FL_DATE_T\"),\"*\")\n",
+    "paired = airlines.join(filter_null, airlines.FL_DATE_T == filter_null.DATE, \"leftouter\") \\\n",
+    "                    .drop('FL_DATE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paired.write.option(\"header\",True).csv(\"./output/FL_Weather\")"
    ]
   }
  ],
